--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          <header class="fixed-top">
             <nav class="navbar navbar-expand-md navbar-dark">
                <div class="container-fluid">
-                  <a href="" class="navbar-brand ms-4 text-white text-decoration-none" aria-controls="navbarCollapse">XX--PROJECT</a>
+                  <a href="index.html" class="navbar-brand ms-4 text-white text-decoration-none" aria-controls="navbarCollapse">XX--PROJECT</a>
                   <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                      <span class="navbar-toggler-icon"></span>
                   </button>
@@ -366,7 +366,7 @@
                      <div class="col-12 col-md-12 d-md-flex">
                         <div class=" col-md-3 article_container">
                               <div class="article_image ">
-                                 <a href=""><img src="./main_images/Rectangle 402.png"  alt=""></a>
+                                 <a href="article.html"><img src="./main_images/Rectangle 402.png"  alt=""></a>
                               </div>
                            <a class="article_title text-white p-3 text-decoration-none" href="">Lorem ipsum dolor</a>
                            <p class="atrticle_text text-white p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nulla vitae eu risus risus proin non. Viverra feugiat...</p>
@@ -380,14 +380,14 @@
                         </div>
                         <div class=" col-md-3 article_container">
                               <div class="article_image ">
-                                 <a href=""><img src="./main_images/Rectangle 403.png"  alt=""></a>
+                                 <a href="article.html"><img src="./main_images/Rectangle 403.png"  alt=""></a>
                               </div>
                               <a class="article_title text-white p-3 text-decoration-none" href="">Lorem ipsum dolor</a>
                               <p class="atrticle_text text-white p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nulla vitae eu risus risus proin non. Viverra feugiat...</p>
                         </div>
                         <div class=" col-md-3 article_container">
                               <div class="article_image ">
-                                 <a href=""><img src="./main_images/Rectangle 404.png" alt=""></a>
+                                 <a href="article.html"><img src="./main_images/Rectangle 404.png" alt=""></a>
                               </div>
                               <a class="article_title text-white p-3 text-decoration-none" href="">Lorem ipsum dolor</a>
                               <p class="atrticle_text text-white p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nulla vitae eu risus risus proin non. Viverra feugiat...</p>
