--- a/article.html
+++ b/article.html
@@ -13,13 +13,13 @@
          <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,600,700" rel="stylesheet"> 
  	      <link rel="stylesheet" type="text/css" href="main_style.css">
           <link rel="stylesheet" type="text/css" href="./css/article.css">
-          <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+         
       </head>
       <body>
          <header class="fixed-top">
             <nav class="navbar navbar-expand-md navbar-dark">
                <div class="container-fluid">
-                  <a href="" class="navbar-brand ms-4 text-white text-decoration-none" aria-controls="navbarCollapse">XX--PROJECT</a>
+                  <a href="index.html" class="navbar-brand ms-4 text-white text-decoration-none" aria-controls="navbarCollapse">XX--PROJECT</a>
                   <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                      <span class="navbar-toggler-icon"></span>
                   </button>
@@ -133,7 +133,7 @@
          <footer class="backimg">
             <div class="row footer_bottom d-flex justify-content-md-around ">
                <div class="col-8">
-                  <a href="" class="navbar-brand ms-4 text-white text-decoration-none" aria-controls="navbarCollapse">XX--PROJECT</a>
+                  <a href="" class="navbar-brand ms-4 text-white text-decoration-none" aria-controls="navbarCollapse">KY_PROJECT</a>
                </div>
                <div class="col-1 d-flex justify-content-around align-items-center">
                   <a href=""><img src="./main_images/Vector (1).svg"></a>
@@ -150,7 +150,7 @@
             </div>
          </footer>
 
-
+         <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
          <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
          <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
