--- a/index.html
+++ b/index.html
@@ -365,28 +365,28 @@
                   <div class="row d-flex justify-content-end p-0 offset-md-2">
                      <div class="col-12 col-md-12 d-md-flex">
                         <div class=" col-md-3 article_container">
-                              <div class="article_image ">
+                              <div class="article_image">
                                  <a href="article.html"><img src="./main_images/Rectangle 402.png"  alt=""></a>
                               </div>
-                           <a class="article_title text-white p-3 text-decoration-none" href="">Lorem ipsum dolor</a>
+                           <a class="article_title text-white p-3 text-decoration-none" href="article.html">Lorem ipsum dolor</a>
                            <p class="atrticle_text text-white p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nulla vitae eu risus risus proin non. Viverra feugiat...</p>
                         </div>
                         <div class=" col-md-3 article_container">
-                              <div class="article_image ">
+                              <div class="article_image">
                                  <a href="article.html"><img src="./main_images/Rectangl401.png"  alt=""></a>
                               </div>
                               <a class="article_title text-white p-3 text-decoration-none"href="" >Lorem ipsum dolor</a>
                               <p class="atrticle_text text-white p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nulla vitae eu risus risus proin non. Viverra feugiat...</p>
                         </div>
                         <div class=" col-md-3 article_container">
-                              <div class="article_image ">
+                              <div class="article_image">
                                  <a href="article.html"><img src="./main_images/Rectangle 403.png"  alt=""></a>
                               </div>
                               <a class="article_title text-white p-3 text-decoration-none" href="">Lorem ipsum dolor</a>
                               <p class="atrticle_text text-white p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nulla vitae eu risus risus proin non. Viverra feugiat...</p>
                         </div>
                         <div class=" col-md-3 article_container">
-                              <div class="article_image ">
+                              <div class="article_image">
                                  <a href="article.html"><img src="./main_images/Rectangle 404.png" alt=""></a>
                               </div>
                               <a class="article_title text-white p-3 text-decoration-none" href="">Lorem ipsum dolor</a>
